# Nephilim

./: .gitignore  CMakeLists.txt  README.MD  README.md
WinThread/include/: pthread.h
assets/: frosting.blend  frosting2.blend
core/observer/: observer.h
core/observer/src/: observer.c  subject.c
core/render/: render.h
core/render/src/: render.c
n_characters/: CMakeLists.txt  characters.h
n_characters/src/: sorcerer.c
n_main/: main.c  neph.c
n_observer/: CMakeLists.txt  observer.h
n_observer/src/: observer.c  subject.c
n_render/: CMakeLists.txt  render.h
neph/: CMakeLists.txt  neph.c  neph.h
